# RayTracingInOneWeekend

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: aabb.h  args.h  bvhnode.h  camera.h  color.h  config.h  dielectric.h  diffuse_light.h  hittable.h  hittable_list.h  image_utils.h  interval.h  lambertian.h  material.h  metal.h  perlin.h  quad.h  ray.h  scenes.h  sphere.h  texture.h  vec3.h
src/: aabb.cc  args.cc  bvhnode.cc  camera.cc  color.cc  config.cc  hittable.cc  hittable_list.cc  image_utils.cc  main.cc  perlin.cc  quad.cc  scenes.cc  sphere.cc  texture.cc
